--- a/distributed-transaction/service3/src/main/resources/application.yml
+++ b/distributed-transaction/service3/src/main/resources/application.yml
@@ -25,24 +25,40 @@ spring:
       discovery:
         server-addr: localhost:8848
         service: service3 # 默认使用spring.application.name
-        network-interface: 10.10.100.66 # If the IP address is not specified, the registered IP address is the IP address of the network card.If this is not specified either, the IP address of the first network card will be used by default.
-        ip: 10.10.140.17 # Highest priority
-        namespace: 84824bfd-2abb-4731-b281-b8063b16fa3b
+        network-interface: 10.1.40.31 # If the IP address is not specified, the registered IP address is the IP address of the network card.If this is not specified either, the IP address of the first network card will be used by default.
+        ip: 192.168.71.1 # Highest priority
+        namespace: ac43df99-720a-49d4-9896-a490fd7afbc2
 
 seata:
   enabled: true
   application-id: service3
-  tx-service-group: my_test_tx_group
+  tx-service-group: default_tx_group
   #一定要是false
   enable-auto-data-source-proxy: false
-  service:
-    vgroup-mapping:
-      #key与上面的tx-service-group的值对应
-      my_test_tx_group: default
-    grouplist:
-      #seata-server地址仅file注册中心需要
-      default: 10.10.140.221:8091
+#  service:
+#    vgroup-mapping:
+#      #key与上面的tx-service-group的值对应
+#      default_tx_group: default
+#    grouplist:
+#      #seata-server地址仅file注册中心需要
+#      default: 10.10.140.221:8091
+#  config:
+#    type: file
+#  registry:
+#    type: file
   config:
-    type: file
+    type: Nacos
+    nacos:
+      server-addr: localhost:8848
+      group: "SEATA_GROUP"
+      namespace: "036bfbd5-e6af-495a-b550-97a4e10fb0ff"
+      username:
+      password:
   registry:
-    type: file
+    type: Nacos
+    nacos:
+      server-addr: localhost:8848
+      group: "SEATA_GROUP"
+      namespace: "036bfbd5-e6af-495a-b550-97a4e10fb0ff"
+      username:
+      password:
