增加配置文件加密功能代码

--- a/nacos-provider-config/pom.xml
+++ b/nacos-provider-config/pom.xml
@@ -65,6 +65,11 @@
             <artifactId>mybatis-plus-boot-starter</artifactId>
             <version>3.4.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.github.ulisesbocchio</groupId>
+            <artifactId>jasypt-spring-boot-starter</artifactId>
+            <version>3.0.4</version>
+        </dependency>
     </dependencies>
 
     <dependencyManagement>
