--- a/nacos-provider-config/src/main/resources/bootstrap.yml
+++ b/nacos-provider-config/src/main/resources/bootstrap.yml
@@ -4,7 +4,7 @@ spring:
       config:
         server-addr: localhost:8848
         file-extension: yaml
-        name: nacos-provider-config
-        namespace: 84824bfd-2abb-4731-b281-b8063b16fa3b
+        name: nacos-provider-config1
+        namespace: ac43df99-720a-49d4-9896-a490fd7afbc2
         group: DEFAULT_GROUP
         refresh-enabled: true
