增加gateway-test，测试spring cloud gateway

--- a/pom.xml
+++ b/pom.xml
@@ -19,6 +19,7 @@
         <module>client</module>
         <module>nacos-provider-config</module>
         <module>nacos-consumer</module>
+        <module>gateway-test</module>
     </modules>
 
 </project>
